modified index.html in dev

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Hello World</h1>
     <script>
-        var str = "Hello";
-        console.log('str : '+ str);
+        var str = "Hello World";
+        console.log('string : '+ str);
     </script>
     
 </body>
