--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello World</h1>
     <script>
-        var str = "Hello";
+        var str = "Hello everyone";
         console.log('str : '+ str);
     </script>
     
