--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello World</h1>
     <script>
-        var str = "Hello everyone";
+        var str = "Hello world ! Enjoy";
         console.log('string : '+ str);
 
     </script>
