--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Hello World</h1>
     <script>
         var str = "Hello world ! Enjoy";
-        console.log('string : '+ str);
+        console.log('string : '+ 1);
 
     </script>
     
