--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         var str = "Hello world ! Enjoy";
         console.log('string : '+ 1);
 
+        var str2 = "HTTP";
+        console.log('st : '+ str);
+
     </script>
     
 </body>
