--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         var str = "Hello world ! Enjoy";
         console.log('string : '+ 1);
 
+        let str2 = "HTTP != RTSP";
+        console.log('dev : '+ str);
+
     </script>
     
 </body>
