--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         var str = "Hello world ! Enjoy";
         console.log('string : '+ 1);
 
-        var str2 = "HTTP";
+        var str2 = "HTTP ! dev";
         console.log('dev : '+ str);
 
     </script>
