--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         var str = "Hello world ! Enjoy";
         console.log('string : '+ 1);
 
-        var str2 = "HTTP ! dev";
-        console.log('dev : '+ str);
+        <h1>World</h1>
 
     </script>
     
